[package]
name = "ymlex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = "3.1.8"
cmd_lib = "1.3.0"
fancy-regex = "0.8.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
valico = "3.6.0"
